--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,39 +1,33 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Elixir CI
+name: CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+  push:
+    branches: [ main ]
 
 jobs:
-  build:
-
-    name: Build and test
-    runs-on: ubuntu-latest
-
+  lint:
+    runs-on: ubuntu-24.04
+    name: "lint"
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Elixir
-      uses: erlef/setup-beam@61e01a43a562a89bfc54c7f9a378ff67b03e4a21 # v1.16.0
-      with:
-        elixir-version: '1.17.3' # [Required] Define the Elixir version
-        otp-version: '27.0'      # [Required] Define the Erlang/OTP version
-    - name: Restore dependencies cache
-      uses: actions/cache@v3
-      with:
-        path: deps
-        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-        restore-keys: ${{ runner.os }}-mix-
-    - name: Install dependencies
-      run: mix deps.get
-    - name: Run tests
-      run: mix test
+      - uses: actions/checkout@v4
+      - uses: erlef/setup-beam@v1
+        with:
+          otp-version: '26.2.5'
+          elixir-version: '1.17.3'
+      - run: mix deps.get
+      - run: mix credo
+
+  test:
+    runs-on: ubuntu-24.04
+    name: "tests"
+    steps:
+      - uses: actions/checkout@v4
+      - uses: erlef/setup-beam@v1
+        with:
+          otp-version: '26.2.5'
+          elixir-version: '1.17.3'
+      - run: mix deps.get
+      - run: mix test
+      - run: mix test --cover --export-coverage default
+      - run: mix test.coverage
